--- a/local.yml
+++ b/local.yml
@@ -136,8 +136,8 @@
       copy:
         src: files/bashrc
         dest: /home/{{ become_user }}/.bashrc
-        owner: {{ become_user }}
-        group: {{ become_user }}
+        owner: "{{ become_user }}"
+        group: "{{ become_user }}"
         mode: '0664'
     
     - name: Add nvim configuration directory
