--- a/local.yml
+++ b/local.yml
@@ -5,25 +5,24 @@
   become: yes
   gather_facts: yes
 
+    ### Variables That Prompt the User
   vars_prompt:
-
+    ### Prompt to Enter a User to Become
     - name: become_user
-      prompt: "Enter the user you want to set"
-      private: no
+        prompt: "Enter the user you want to set"
+        private: no
 
+    ### Prompt to Enter a Password For The New User
     - name: become_user_password
-      prompt: "Enter a password for {{ become_user}}"
-      private: yes
+        prompt: "Enter a password for {{ become_user}}"
+        private: yes
 
-    - name: desktop_env
-      prompt: "Enter your desktop environment (gnome/cinnamon/mate)"
-      private: no
-
+    ### Prompt to Enter Reboot the system
     - name: reboot_now
-      prompt: "Do you want to reboot the system now? (yes/no)"
-      private: no
-      default: "no"  # Default fallback for reboot prompt
-      validate: '^yes$|^no$'  # Only accept "yes" or "no"
+        prompt: "Do you want to reboot the system now? (yes/no)"
+        private: no
+        default: "no"  # Default fallback for reboot prompt
+        validate: '^yes$|^no$'  # Only accept "yes" or "no"
 
   tasks:
     ### Ensure The User Exists, Then Hash password
@@ -133,24 +132,24 @@
       copy:
         src: files/bashrc
         dest: /home/{{ become_user }}/.bashrc
-        owner: "{{ become_user }}"
-        group: "{{ become_user }}"
+        owner: {{ become_user }}
+        group: {{ become_user }}
         mode: '0664'
     
     - name: Add nvim configuration directory
       copy:
         src: files/nvim
         dest: /home/{{ become_user }}/.config/nvim
-        owner: "{{ become_user }}"
-        group: "{{ become_user }}"
+        owner: {{ become_user }}
+        group: {{ become_user }}
         mode: '0755'
 
     - name: Add wezterm configuration directory
       copy:
         src: files/wezterm
         dest: /home/{{ become_user }}/.config/wezterm
-        owner: "{{ become_user }}"
-        group: "{{ become_user }}"
+        owner: {{ become_user }}
+        group: {{ become_user }}
         mode: '0755'
 
     ### Reboot System For Changes To Take Effect
